--- a/slajdy/lekcja1.latex
+++ b/slajdy/lekcja1.latex
@@ -29,7 +29,7 @@
 \end{frame}
 
 \section{Wprowadzenie do Pythona}
-
+\insertsectionhead
 \begin{frame}{Historia języka}
     \begin{itemize}
         \pause
