--- a/slajdy/lekcja2.latex
+++ b/slajdy/lekcja2.latex
@@ -30,7 +30,7 @@
 \begin{document}
 
 \begin{frame}
-  \titlepage 
+  \titlepage
 \end{frame}
 
 \section{Instrukcje sterujące}
@@ -87,7 +87,45 @@
     \Verb|zadanie2-1.py|
 \end{frame}
 
+\section{Funkcja -- teoria}
+\insertsectionhead
+
+\begin{frame}{Czym jest funkcja}
+    \begin{itemize}
+        \pause
+    \item Funkcja w znaczeniu matematycznym
+        \pause
+    \item Procedura
+        \pause
+    \item Funkcja jako uogólnienie dwóch powyższych
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Argumenty}
+    \begin{itemize}
+        \pause
+    \item Argumenty pozycyjne \Verb|funkcja(arg1, arg2)|
+        \pause
+    \item Argumenty nazwane \Verb|funcja(x=argx, y=argy)|
+        \pause
+    \item Wartości domyślne argumentów
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Wartość zwracana}
+    \begin{itemize}
+        \pause
+    \item Funkcja może zwracać wartość dowolnego typu
+        \pause
+    \item Funkcje, które nie mają do zwrócenia niczego interesującego, zwracają
+        \Verb|None|
+        \pause
+    \item W każdym przypadku możemy zignorować wartość nie przypisując jej do
+        niczego.
+    \end{itemize}
+\end{frame}
 \section{Funkcje i typy wbudowane}
+\insertsectionhead
 
 \begin{frame}{Konwersje typów}
     \begin{tiny}
@@ -124,6 +162,26 @@
 
 \begin{frame}{Inne}
     \input{builtin_other}
+\end{frame}
+
+\begin{frame}{Zadanie}
+    zadanie2-2.py
+\end{frame}
+
+\begin{frame}{Definiowanie własnych funkcji}
+    \input{function_simplest}
+\end{frame}
+
+\begin{frame}{Definiowanie własnych funkcji}
+    \input{function_arg}
+\end{frame}
+
+\begin{frame}{Definiowanie własnych funkcji}
+    \input{function_args_kwargs}
+\end{frame}
+
+\begin{frame}{Zadanie}
+    zadanie2-3.py
 \end{frame}
 
 \end{document}
